Remove unnecessary layout updates from InsertInto/DeleteFromTextNodeCommand

InsertInto/DeleteFromTextNodeCommand used to update layout at the
end of doApply() and unApply(), which is bad because the client
of the clean layout is unclear, and unnecessary layout updates
may be performed.

This patch removes these layout update calls, and explicitly updates
layout before clients.

BUG=694816
TEST=n/a; no behavior change

Review-Url: https://codereview.chromium.org/2705373002
Cr-Commit-Position: refs/heads/master@{#451936}

Former-commit-id: 7a0a5316f12d0873b3c17a29157b703cf4f1ae36